ams-view-logger/main/default/objects/amsvl_ViewLog__c/amsvl_ViewLog__c.object-meta.xml
<CustomObject>
    <description>Object for storing users&apos; view logs per related record.</description>
    <label>View Log</label>
    <nameField>
        <displayFormat>VL-{00000}</displayFormat>
        <label>View Log Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>View Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>