ams-view-logger/main/default/objects/amsvl_ViewLog__c/fields/amsvl_LastVisited__c.field-meta.xml
<CustomField>
    <fullName>amsvl_LastVisited__c</fullName>
    <description>Stores datetime when the user&apos;s view was logged.</description>
    <label>Last Visited</label>
    <type>DateTime</type>
</CustomField>