ams-view-logger/main/default/objects/amsvl_ViewLog__c/fields/amsvl_ObjectName__c.field-meta.xml
<CustomField>
    <fullName>amsvl_ObjectName__c</fullName>
    <description>Stores object name of related record.</description>
    <label>Object Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>