ams-view-logger/main/default/objects/amsvl_ViewLog__c/fields/amsvl_RecordId__c.field-meta.xml
<CustomField>
    <fullName>amsvl_RecordId__c</fullName>
    <description>Stores ID of related record.</description>
    <label>Record Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>