ams-view-logger/main/default/objects/amsvl_ViewLog__c/fields/amsvl_User__c.field-meta.xml
<CustomField>
    <fullName>amsvl_User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Stores ID of the user who viewed the record.</description>
    <label>User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>View_Logs</relationshipName>
    <type>Lookup</type>
</CustomField>