ams-view-logger/main/default/objects/amsvl_ViewLog__c/fields/amsvl_ViewCount__c.field-meta.xml
<CustomField>
    <fullName>amsvl_ViewCount__c</fullName>
    <description>Stores total view count of user per record.</description>
    <label>View Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>